# Hackathons

./: 0002_alter_memento_audio_alter_memento_img.py  0006_alter_userprofile_profile_pic.py  0008_remove_memento_img_memento_img1_memento_img2_and_more.py  README.md  projectPlan.md  requirements.txt  settings.py  urls.py  views.py  wsgi.py
Hack the Ridge/: French English.txt  French.txt  Portugese.txt  Spanish English.txt  Spanish.txt  main.py  pyproject.toml  replit.nix  replit_zip_error_log.txt
Hack the Valley/: main.py  questions.txt  replit_zip_error_log.txt
Mohacks/: e.py  formthing.php  googleKey.json  index.html  info.txt  main.py  replit_zip_error_log.txt
UofTHacks/: 0001_initial.py  0003_alter_memento_published_date.py  0004_userprofile.py  0005_alter_userprofile_profile_pic.py  0007_alter_memento_text.py  add-memento.html  admin.py  apps.py  asgi.py  base.html  db.sqlite3  edit-mementos.html  index.html  login.html  manage.py  mementos.html  models.py  profile.html  projectPlan.md  register.html  settings.py  style.css  style.css.map  style.scss  urls.py  views.py
